external-crates/move/crates/move-compiler/tests/development/typing/signed_int_negation_min_overflow.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_negation_min_overflow.move:8:16
  │
8 │         let x: i8 = -128i8;
  │                ^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_negation_min_overflow.move:8:21
  │
8 │         let x: i8 = -128i8;
  │                     ^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_negation_min_overflow.move:9:17
  │
9 │         let _y: i8 = -x; // overflows: -(-128) doesn't fit in i8
  │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_negation_min_overflow.move:9:22
  │
9 │         let _y: i8 = -x; // overflows: -(-128) doesn't fit in i8
  │                      ^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_negation_min_overflow.move:13:16
   │
13 │         let x: i64 = -9223372036854775808i64;
   │                ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_negation_min_overflow.move:13:22
   │
13 │         let x: i64 = -9223372036854775808i64;
   │                      ^^^^^^^^^^^^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_negation_min_overflow.move:14:17
   │
14 │         let _y: i64 = -x; // overflows
   │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_negation_min_overflow.move:14:23
   │
14 │         let _y: i64 = -x; // overflows
   │                       ^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_negation_min_overflow.move:19:17
   │
19 │         let _x: i8 = -(-127i8); // = 127, should be fine
   │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_negation_min_overflow.move:19:22
   │
19 │         let _x: i8 = -(-127i8); // = 127, should be fine
   │                      ^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_negation_min_overflow.move:24:17
   │
24 │         let _x: i8 = (128i64 as i8); // 128 doesn't fit in i8
   │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_negation_min_overflow.move:24:23
   │
24 │         let _x: i8 = (128i64 as i8); // 128 doesn't fit in i8
   │                       ^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_negation_min_overflow.move:24:23
   │
24 │         let _x: i8 = (128i64 as i8); // 128 doesn't fit in i8
   │                       ^^^^^^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_negation_min_overflow.move:28:17
   │
28 │         let _x: i8 = (-129i64 as i8); // -129 doesn't fit in i8
   │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_negation_min_overflow.move:28:23
   │
28 │         let _x: i8 = (-129i64 as i8); // -129 doesn't fit in i8
   │                       ^^^^^^^ Signed integer types are under development

error[E13003]: feature is under active development
   ┌─ tests/development/typing/signed_int_negation_min_overflow.move:28:23
   │
28 │         let _x: i8 = (-129i64 as i8); // -129 doesn't fit in i8
   │                       ^^^^^^^^^^^^^ Signed integer types are under development
